infrastructure/juice-shop/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juice-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: juice-shop
  template:
    metadata:
      annotations:
        io.kubernetes.cri-o.userns-mode: "auto:size=65536"
      labels:
        app: juice-shop
    spec:
      automountServiceAccountToken: false
      runtimeClassName: sysbox-runc
      containers:
        - image: mirror.gcr.io/bkimminich/juice-shop@sha256:c6f965f8929c2c43676e3ac55cd19d482c0084400195db07ed7513a04f3468b5
          imagePullPolicy: IfNotPresent
          name: juice-shop
          resources:
            requests:
              cpu: 0m
              memory: 0Mi
            limits:
              cpu: 300m
              memory: 400Mi
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
